# edgetx_esp32

cmake/: Macros.cmake
companion/src/firmwares/: moduledata.cpp  moduledata.h
companion/src/firmwares/edgetx/: yaml_moduledata.cpp
latest/: 404.html  index.html  sitemap.xml
latest/building/: index.html
latest/building/codespaces/: index.html
latest/building/compilation-options/: index.html
latest/building/linux-ubuntu-22.04/: index.html
latest/building/linux-ubuntu-24.04/: index.html
latest/building/linux-wsl/: index.html
latest/building/macos-catalina/: index.html
latest/building/macos-sequoia/: index.html
latest/building/macos-sonoma/: index.html
latest/building/qt-creator/: index.html
latest/building/windows/: index.html
latest/building/windows-docker/: index.html
latest/contributing/getting-started-with-git/: index.html
latest/contributing/some-git-commands/: index.html
latest/contributing/workflow-for-github-noobs/: index.html
latest/development/cli-commands/: index.html
latest/development/control-inputs/: index.html
latest/development/external-module-protocols/: index.html
latest/development/mixer-synchronisation/: index.html
latest/development/yaml-parser-generator/: index.html
latest/hardware/dma-mapping-nv14/: index.html
latest/hardware/dma-mapping-tx16s/: index.html
latest/hardware/irq-usage-tx16s/: index.html
latest/hardware/radio-specs/: index.html
latest/mods/flashing-flysky-pl18/: index.html
latest/mods/flysky-frm303-tx16s/: index.html
latest/mods/flysky-hall-sticks/: index.html
latest/mods/flysky-nb4plus/: index.html
latest/mods/flysky-pl18/: index.html
latest/mods/flysky-st16-touch-support/: index.html
latest/troubleshooting/unbrick/: index.html
radio/src/: CMakeLists.txt  FreeRTOSConfig.h  audio.cpp  cli.cpp  dataconstants.h  datastructs.h  datastructs_private.h  definitions.h  edgetx.cpp  edgetx.h  main.cpp  model_init.cpp  rtos.c  rtos.h  sdcard.cpp  sdcard.h  serial.cpp  syscalls.c  tasks.cpp  tasks.h  usb_joystick.cpp  usb_joystick.h
radio/src/boards/hw_defs/: openx1.json
radio/src/gui/: gui_common.cpp
radio/src/gui/colorlcd/: CMakeLists.txt  LvglWrapper.cpp  bitmaps.cpp  bitmaps.h  fonts.cpp  lcd.cpp  lv_conf.h
radio/src/gui/colorlcd/libui/: file_browser.cpp  file_browser.h  static.cpp
radio/src/gui/colorlcd/mainview/: widget_settings.cpp
radio/src/gui/colorlcd/model/: model_select.cpp
radio/src/gui/colorlcd/module/: module_setup.cpp
radio/src/gui/colorlcd/radio/: radio_sdmanager.cpp  radio_wifi.cpp  radio_wifi.h
radio/src/gui/colorlcd/setup_menus/: quick_menu_data.cpp
radio/src/gui/colorlcd/widgets/: radio_info.cpp
radio/src/hal/: CMakeLists.txt  adc_driver.cpp  module_driver.h  module_port.cpp  rotary_encoder.h
radio/src/io/: bootloader_flash.cpp
radio/src/lua/: api_general.cpp  lua_widget.cpp
radio/src/os/: async_freertos.cpp  sleep_freertos.cpp  task_freertos.h  time_freertos.cpp  time_freertos.h  timer_freertos.h
radio/src/pulses/: crossfire.cpp  modules_constants.h  modules_helpers.cpp  modules_helpers.h  pulses.cpp
radio/src/storage/: modelslist.cpp
radio/src/storage/yaml/: CMakeLists.txt  yaml_datastructs.cpp  yaml_datastructs_128x64.cpp  yaml_datastructs_nv14.cpp  yaml_datastructs_openx1.cpp  yaml_datastructs_pl18.cpp  yaml_datastructs_t15.cpp  yaml_tree_walker.cpp
radio/src/targets/common/esp32/: CMakeLists.txt  abnormal_reboot.cpp  adc_hal_driver.cpp  battery_voltage.cpp  board_common.h  diskio_spi.cpp  diskio_spi.h  dma2d.h  esp32_rmt_rx.cpp  esp32_rmt_rx.h  esp32_rmt_uart.cpp  esp32_storage.cpp  esp32_uart_driver.cpp  esp32_uart_driver.h  esp_ble_powerup.c  esprc.h  esprc_packet.h  heartbeat_driver.h  i2c_driver.cpp  i2c_driver.h  memory_sections.h  mixer_scheduler_driver.cpp  pulses_bt_powerup.cpp  pulses_esp32.h  pulses_espnow.cpp  rmt_uart_tx_encoder.cpp  sound_i2s.cpp  timers_driver.cpp  timers_driver.h  usb_driver.cpp  watchdog_driver.cpp
radio/src/targets/common/esp32/components/lvgl_esp32_drivers/: CMakeLists.txt  Kconfig  lvgl_helpers.c  lvgl_helpers.h
radio/src/targets/common/esp32/components/lvgl_esp32_drivers/lvgl_i2c/: i2c_manager.h
radio/src/targets/common/esp32/components/lvgl_esp32_drivers/lvgl_tft/: Kconfig  disp_driver.c  disp_mcu.c  esp_lcd_backlight.c  esp_lcd_panel_hx8357.c  esp_lcd_panel_ili9488.c  esp_lcd_panel_st7796s.c  ili9488.c
radio/src/targets/common/esp32/components/lvgl_esp32_drivers/lvgl_touch/: Kconfig  ft6x36.c  ft6x36.h
radio/src/targets/common/esp32/ftp-server/: WiFi.c  ftp.c  initWiFi.cpp
radio/src/targets/common/esp32/ota_server/: ota_server.c
radio/src/targets/common/esp32/ota_server/include/: ota_server.h
radio/src/targets/openx1/: CMakeLists.txt  ads1015_adc.cpp  ads1x15.h  backlight_driver.cpp  board.cpp  board.h  flyskyHallStick_driver.cpp  flyskyHallStick_driver.h  hal.h  lcd_lvgl_esp.cpp  libopenui_config.h  mcp23017_io_driver.cpp  mcp23xxx.h  mcp_pins.h  module_drivers.cpp  pwr_driver.cpp  rtc_driver.cpp  sh1107_top_lcd.cpp  switch_driver.cpp  trainer_driver.cpp
radio/src/targets/openx1/esp32_build/: CMakeLists.txt  README.md  clang-README.txt  lv_conf_edgetx.h  partitions.csv  requirement.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.old
radio/src/targets/openx1/esp32_build/main/: CMakeLists.txt  espidf_edgetx_main.cpp  idf_component.yml
radio/src/targets/pa01/: lcd_driver.cpp
radio/src/targets/tx16smk3/: CMakeLists.txt
radio/src/tasks/: mixer_task.cpp
radio/src/telemetry/: multi.cpp
radio/src/translations/: translation_def.h
radio/util/: find_clang.py
radio/util/hw_defs/: ads1015_adc_inputs.jinja  legacy_names.py  mcp23017_keys.jinja  mcp23017_switches.jinja  pot_config.py  switch_config.py
tools/: generate-yaml.sh
